refactor: add alt tag to img tags according to rule 1.2 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="app">
     <header class="header">
-      <img src="./eisenhower-matrix.jpg" class="header__img">
+      <img src="./eisenhower-matrix.jpg" class="header__img" alt="doto-list app cover">
       <a class="header__details" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main-functions-block">
@@ -26,14 +26,14 @@
           <label class="todo__task-name">Pay Bills</label>
           <input type="text" class="input todo__task-name-input todo__task-name-input_hidden">
           <button class="button todo__edit-btn">Edit</button>
-          <button class="button todo__delete-btn"><img src="./remove.svg" class="todo__delete-img"></button>
+          <button class="button todo__delete-btn"><img src="./remove.svg" class="todo__delete-img" alt="remove-icon"></button>
         </li>
         <li class="todo__item todo__item_edit-mode">
           <input class="todo__checkbox" type="checkbox">
           <label class="todo__task-name todo__task-name_hidden">Go Shopping</label>
           <input type="text" value="Go Shopping" class="input todo__task-name-input todo__task-name-input_active">
           <button class="button todo__edit-btn">Save</button>
-		  <button class="button todo__delete-btn"><img src="./remove.svg" class="todo__delete-img"></button>
+		  <button class="button todo__delete-btn"><img src="./remove.svg" class="todo__delete-img" alt="remove-icon"></button>
         </li>
       </ul>
       </section>
@@ -45,7 +45,7 @@
           <label class="todo__task-name todo__task-name_crossed-out">See the Doctor</label>
           <input type="text" class="input todo__task-name-input todo__task-name-input_hidden">
           <button class="button todo__edit-btn">Edit</button>
-          <button class="button todo__delete-btn"><img src="./remove.svg" class="todo__delete-img"></button>
+          <button class="button todo__delete-btn"><img src="./remove.svg" class="todo__delete-img" alt="remove-icon"></button>
         </li>
       </ul>
       </section>
