refactor: rename class name according to rule 3.1 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <ul class="todo__list done__list">
         <li class="todo__item">
           <input class="todo__checkbox" type="checkbox" checked>
-          <label class="todo__task-name todo__task-name_crossed-out">See the Doctor</label>
+          <label class="todo__task-name todo__task-name_deleted">See the Doctor</label>
           <input type="text" class="input todo__task-name-input todo__task-name-input_hidden">
           <button class="button todo__edit-btn">Edit</button>
           <button class="button todo__delete-btn"><img src="./remove.svg" class="todo__delete-img" alt="remove-icon"></button>
