fix: w3 validator issues

--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Todo App</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="style.css" media="screen">
   </head>
   <body class="app">
     <header class="header">
-      <img src="./eisenhower-matrix.jpg" class="header__img" alt="doto-list app cover">
+      <img src="./eisenhower-matrix.jpg" class="header__img" alt="todo-list app cover">
       <a class="header__details" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main-functions-block">
       <section class="section add-to-list">
-        <h3 for="add-new-task-name" class="section__name add-to-list__section-name">Add Item</h3>
-        <div class="add-to-list__row-wrapper">
+        <h3 class="section__name add-to-list__section-name">Add Item</h3>
+        <p class="add-to-list__row-wrapper">
           <input class="input add-to-list__new-task" type="text">
           <button class="button add-to-list__button">Add</button>
-        </div>
+        </p>
       </section>
       <section class="section todo">
       <h3 class="section__name">Todo</h3>
